@@ -3,7 +3,9 @@ package com.notification_service;
 
 import com.notification_service.application.NotificationServiceImpl;
 import com.notification_service.domain.models.Notification;
-import com.notification_service.ports.outgoing.NotificationRepository;
+import com.notification_service.domain.models.User;
+import com.notification_service.ports.out.NotificationRepository;
+import com.notification_service.ports.out.UserProvider;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.test.context.ActiveProfiles;
@@ -17,13 +19,15 @@ import static org.mockito.Mockito.*;
 @ActiveProfiles("test")
 class NotificationServiceImplTest {
 
-    private NotificationRepository repository;
+    private NotificationRepository notificationRepository;
+    private UserProvider userProvider;
     private NotificationServiceImpl service;
 
     @BeforeEach
     void setUp() {
-        repository = mock(NotificationRepository.class);
-        service = new NotificationServiceImpl(repository);
+        notificationRepository = mock(NotificationRepository.class);
+        userProvider = mock(UserProvider.class);
+        service = new NotificationServiceImpl(notificationRepository, userProvider);
     }
 
     @Test
@@ -32,39 +36,39 @@ class NotificationServiceImplTest {
         List<Notification> notifications = List.of(
                 new Notification(1L, username, "Title", "Message", Notification.NotificationStatus.UNREAD)
         );
-        when(repository.findByUser(username)).thenReturn(notifications);
+        when(notificationRepository.findByUser(username)).thenReturn(notifications);
 
         List<Notification> result = service.getNotifications(username);
 
         assertEquals(1, result.size());
-        assertEquals("Title", result.getFirst().getTitle());
-        verify(repository, times(1)).findByUser(username);
+        assertEquals("Title", result.get(0).getTitle());
+        verify(notificationRepository, times(1)).findByUser(username);
     }
 
     @Test
     void getNotificationById_ReturnsNotification() {
         Long id = 1L;
         Notification notification = new Notification(id, "testUser", "Title", "Message", Notification.NotificationStatus.UNREAD);
-        when(repository.findById(id)).thenReturn(Optional.of(notification));
+        when(notificationRepository.findById(id)).thenReturn(Optional.of(notification));
 
         Optional<Notification> result = service.getNotificationById(id);
 
         assertTrue(result.isPresent());
         assertEquals("Title", result.get().getTitle());
-        verify(repository, times(1)).findById(id);
+        verify(notificationRepository, times(1)).findById(id);
     }
 
     @Test
     void updateNotificationStatus_UpdatesStatus() {
         Long id = 1L;
         Notification notification = new Notification(id, "testUser", "Title", "Message", Notification.NotificationStatus.UNREAD);
-        when(repository.findById(id)).thenReturn(Optional.of(notification));
+        when(notificationRepository.findById(id)).thenReturn(Optional.of(notification));
 
         service.updateNotificationStatus(id, Notification.NotificationStatus.READ);
 
         assertEquals(Notification.NotificationStatus.READ, notification.getStatus());
-        verify(repository, times(1)).findById(id);
-        verify(repository, times(1)).save(notification);
+        verify(notificationRepository, times(1)).findById(id);
+        verify(notificationRepository, times(1)).save(notification);
     }
 
     @Test
@@ -73,20 +77,20 @@ class NotificationServiceImplTest {
 
         service.saveNotification(notification);
 
-        verify(repository, times(1)).save(notification);
+        verify(notificationRepository, times(1)).save(notification);
     }
 
     @Test
-    void getAllUsernames_ReturnsUsernames() {
-        List<String> usernames = List.of("testUser", "otherUser");
-        when(repository.findAllUsernames()).thenReturn(usernames);
+    void getAllUsers_ReturnsUsers() {
+        List<User> users = List.of(new User("testUser"), new User("otherUser"));
+        when(userProvider.listUsers()).thenReturn(users);
 
-        List<String> result = service.getAllUsernames();
+        List<User> result = service.getAllUsers();
 
         assertEquals(2, result.size());
-        assertEquals("testUser", result.get(0));
-        assertEquals("otherUser", result.get(1));
-        verify(repository, times(1)).findAllUsernames();
+        assertEquals("testUser", result.get(0).getUsername());
+        assertEquals("otherUser", result.get(1).getUsername());
+        verify(userProvider, times(1)).listUsers();
     }
 
     @Test
@@ -96,12 +100,12 @@ class NotificationServiceImplTest {
         List<Notification> notifications = List.of(
                 new Notification(1L, username, "Title", "Message", status)
         );
-        when(repository.findByUserAndStatus(username, status)).thenReturn(notifications);
+        when(notificationRepository.findByUserAndStatus(username, status)).thenReturn(notifications);
 
         List<Notification> result = service.getNotificationsByStatus(username, status);
 
         assertEquals(1, result.size());
         assertEquals("Title", result.get(0).getTitle());
-        verify(repository, times(1)).findByUserAndStatus(username, status);
+        verify(notificationRepository, times(1)).findByUserAndStatus(username, status);
     }
 }
